Настройка gihub-pages

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "cat-energy-25",
   "private": true,
   "description": "Личный проект «Кэт энерджи» от HTML Academy",
+  "homepage": "https://shcherbina-andrei.github.io/1845009-cat-energy-25/",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "10.4.0",
     "browser-sync": "2.27.7",
     "del": "^6.1.0",
+    "gh-pages": "^4.0.0",
     "gulp": "4.0.2",
     "gulp-dart-sass": "^1.0.2",
     "gulp-htmlmin": "^5.0.1",
@@ -27,7 +29,9 @@
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "lint": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
-    "start": "gulp"
+    "start": "gulp",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     "last 2 versions",
